--- a/app/src/main/res/layout/item_latest_view.xml
+++ b/app/src/main/res/layout/item_latest_view.xml
@@ -56,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Continue"
+            android:backgroundTint="@color/blue"
             app:layout_constraintStart_toStartOf="@+id/progress_bar"
             app:layout_constraintTop_toBottomOf="@+id/tv_score" />
 
