--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -53,7 +53,7 @@
             android:id="@+id/descriptionEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter description"
+            android:hint="Enter task description"
             android:padding="12dp"
             android:inputType="textMultiLine"
             android:lines="3"
@@ -61,19 +61,12 @@
             android:layout_marginBottom="16dp"/>
 
         <Button
-            android:backgroundTint="@color/blue"
-            android:id="@+id/selectFileButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select File" />
-
-        <Button
             android:layout_marginTop="16dp"
             android:backgroundTint="@color/blue"
             android:id="@+id/uploadButton"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Upload" />
+            android:text="Share Task" />
     </LinearLayout>
             </androidx.cardview.widget.CardView>
         </androidx.constraintlayout.widget.ConstraintLayout>
