--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -82,12 +82,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Beginner"
+                android:textSize="12sp"
+                android:textColor="@color/white"
                 app:chipBackgroundColor="#4CAF50"
                 app:chipCornerRadius="8dp"
-                android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:chipMinHeight="10dp"
+                app:chipStartPadding="8dp"
+                app:chipEndPadding="8dp"
+                app:textStartPadding="4dp"
+                app:textEndPadding="4dp"
+                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_user_name" />
+                app:layout_constraintEnd_toEndOf="parent"/>
+
 
             <LinearLayout
                 android:id="@+id/ll_stats"
