--- a/app/src/main/res/anim/slide_in_right.xml
+++ b/app/src/main/res/anim/slide_in_right.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:interpolator="@android:interpolator/decelerate_quad">
     <translate
-        android:fromXDelta="100%"
-        android:toXDelta="0%"
-        android:duration="250"/>
+        android:fromXDelta="100%p"
+        android:toXDelta="0"
+        android:duration="@android:integer/config_shortAnimTime"/>
 </set>
