--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,13 +17,15 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tv_greeting"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginTop="16dp"
                 android:text='@{"Welcome Back!, " + vm.userName}'
                 android:textColor="@color/black"
                 android:textSize="24sp"
@@ -35,6 +37,7 @@
                 android:id="@+id/tv_subtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:text="Let's learn something today!"
                 android:textColor="@color/gray"
                 android:textSize="16sp"
@@ -45,7 +48,9 @@
                 android:id="@+id/card_play_quiz"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
                 app:cardBackgroundColor="@color/blue"
                 app:cardCornerRadius="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -96,6 +101,7 @@
                 android:id="@+id/tv_category_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:text="Category"
                 android:textColor="@color/black"
@@ -110,6 +116,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:scrollbars="none"
+                android:clipToPadding="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_category_title">
@@ -118,13 +125,15 @@
                     android:id="@+id/chip_group_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:paddingStart="16dp"
+                    android:paddingEnd="16dp"
                     app:singleLine="true">
 
                     <com.google.android.material.chip.Chip
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Coding"
+                        android:text="Mobile Development"
                         app:chipBackgroundColor="@color/blue"
                         app:chipStrokeColor="@color/blue"
                         app:chipStrokeWidth="1dp"
@@ -136,13 +145,13 @@
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Jaringan Komputer" />
+                        android:text="Computer Security" />
 
                     <com.google.android.material.chip.Chip
                         style="@style/Widget.MaterialComponents.Chip.Choice"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Keamanan Komputer" />
+                        android:text="Web Development" />
 
                 </com.google.android.material.chip.ChipGroup>
 
@@ -152,6 +161,7 @@
                 android:id="@+id/tv_friendlist_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:text="Friendlist"
                 android:textColor="@color/black"
@@ -164,6 +174,7 @@
                 android:id="@+id/tv_add_friend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:text="Add Friend"
                 android:textColor="@color/blue"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_friendlist_title"
@@ -176,6 +187,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:orientation="horizontal"
+                android:clipToPadding="false"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -187,6 +199,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:layout_marginStart="16dp"
                 android:text="Discovery"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -200,6 +213,7 @@
                 android:layout_height="wrap_content"
                 android:text="View All"
                 android:textColor="@color/blue"
+                android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_discovery_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_discovery_title" />
@@ -210,11 +224,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_discovery_title"
-                tools:listitem="@layout/item_banner" />
+                tools:listitem="@layout/item_question" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
