--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- 24dp normal size for icon-->
     <item
         android:id="@+id/menu_home"
         android:icon="@drawable/ic_home"
-        android:title="Home"/>
+        android:title="Home" />
+
     <item
-        android:id="@+id/menu_bookmark"
+        android:id="@+id/menu_forum"
         android:icon="@drawable/ic_bookmark"
-        android:title="Bookmark"/>
+        android:title="Forum" />
+
     <item
         android:id="@+id/menu_upload"
         android:icon="@drawable/ic_upload"
-        android:title="Upload"/>
+        android:title="Upload" />
+
     <item
         android:id="@+id/menu_notification"
         android:icon="@drawable/ic_notification"
-        android:title="Notification"/>
+        android:title="Notification" />
+
     <item
         android:id="@+id/menu_profile"
         android:icon="@drawable/ic_profile"
-        android:title="Profile"/>
+        android:title="Profile" />
+
 </menu>
