--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#F5F5F5"
+        android:background="@drawable/bg_gradient"
         android:fillViewport="true"
         tools:context=".ui.home.HomeFragment">
 
@@ -60,7 +60,9 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp">
+                    android:padding="16dp"
+                    android:clipToPadding="false"
+                    android:clipChildren="false">
 
                     <TextView
                         android:id="@+id/tv_share_title"
@@ -70,7 +72,7 @@
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toStartOf="@+id/iv_quiz_illustration"
+                        app:layout_constraintEnd_toStartOf="@+id/iv_illustration"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -86,12 +88,16 @@
                         app:layout_constraintTop_toBottomOf="@+id/tv_share_title" />
 
                     <ImageView
-                        android:id="@+id/iv_quiz_illustration"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:src="@drawable/ic_launcher_foreground"
+                        android:id="@+id/iv_illustration"
+                        android:layout_width="150dp"
+                        android:layout_height="150dp"
+                        android:src="@drawable/logo"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toTopOf="parent"
+
+                        android:translationY="20dp"
+
+                        android:rotation="12"/>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
