--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/bg_gradient"
+        android:background="#F5F5F5"
         android:fillViewport="true"
         tools:context=".ui.home.HomeFragment">
 
@@ -24,8 +24,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
                 android:text='@{"Welcome Back!, " + vm.userName}'
                 android:textColor="@color/black"
                 android:textSize="24sp"
@@ -49,8 +49,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="48dp"
                 android:layout_marginEnd="16dp"
+                android:clipChildren="false"
+                android:clipToPadding="false"
                 app:cardBackgroundColor="@color/blue"
                 app:cardCornerRadius="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -60,19 +62,18 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:padding="16dp"
-                    android:clipToPadding="false"
-                    android:clipChildren="false">
+                    android:padding="16dp">
 
                     <TextView
                         android:id="@+id/tv_share_title"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
                         android:text="Share task with your friends"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:textStyle="bold"
-                        app:layout_constraintEnd_toStartOf="@+id/iv_illustration"
+                        app:layout_constraintEnd_toStartOf="@+id/iv_illustration_anchor"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
@@ -87,21 +88,28 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tv_share_title" />
 
-                    <ImageView
-                        android:id="@+id/iv_illustration"
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:src="@drawable/logo"
+                    <View
+                        android:id="@+id/iv_illustration_anchor"
+                        android:layout_width="1dp"
+                        android:layout_height="1dp"
+                        android:layout_marginEnd="120dp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-
-                        android:translationY="20dp"
-
-                        android:rotation="12"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/iv_illustration"
+                android:layout_width="212dp"
+                android:layout_height="212dp"
+                android:elevation="8dp"
+                android:translationY="-40dp"
+                android:translationX="23dp"
+                android:src="@drawable/bannerrr"
+                app:layout_constraintEnd_toEndOf="@+id/card_play_quiz"
+                app:layout_constraintTop_toTopOf="@+id/card_play_quiz" />
 
             <TextView
                 android:id="@+id/tv_category_title"
@@ -121,8 +129,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:scrollbars="none"
                 android:clipToPadding="false"
+                android:scrollbars="none"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_category_title">
@@ -143,7 +151,6 @@
                         app:chipBackgroundColor="@color/blue"
                         app:chipStrokeColor="@color/blue"
                         app:chipStrokeWidth="1dp"
-                        app:rippleColor="@color/white"
                         app:checkedIconVisible="false"
                         android:textColor="@color/white"/>
 
@@ -176,6 +183,20 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/hsv_category" />
 
+            <ImageButton
+                android:id="@+id/btn_add_friend_header"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_profile"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                app:tint="@color/blue"
+                android:contentDescription="Add Friend"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/tv_friendlist_title"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_friendlist_title"
+                android:visibility="gone" />
+
             <TextView
                 android:id="@+id/tv_add_friend"
                 android:layout_width="wrap_content"
@@ -192,8 +213,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:orientation="horizontal"
                 android:clipToPadding="false"
+                android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -204,8 +225,8 @@
                 android:id="@+id/tv_discovery_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
                 android:text="Discovery"
                 android:textColor="@color/black"
                 android:textSize="20sp"
@@ -217,9 +238,9 @@
                 android:id="@+id/tv_view_all"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:text="View All"
                 android:textColor="@color/blue"
-                android:layout_marginEnd="16dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_discovery_title"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_discovery_title" />
@@ -229,7 +250,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_discovery_title"
