--- a/app/src/main/res/layout/fragment_upload.xml
+++ b/app/src/main/res/layout/fragment_upload.xml
@@ -94,7 +94,7 @@
                 android:layout_width="48dp"
                 android:layout_height="48dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/ic_upload"
+                android:src="@drawable/ic_paperclip"
                 android:padding="12dp"
                 app:tint="@color/black" />
 
