--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,7 +8,7 @@
 
     <item
         android:id="@+id/menu_forum"
-        android:icon="@drawable/ic_bookmark"
+        android:icon="@drawable/ic_forum"
         android:title="Forum" />
 
     <item
