--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -208,7 +208,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
-                android:backgroundTint="#FF9800"
+                android:backgroundTint="@color/blue"
                 android:text="Edit Profile"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toStartOf="@+id/btn_messages"
@@ -221,7 +221,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="16dp"
-                android:backgroundTint="#FF9800"
+                android:backgroundTint="@color/blue"
                 android:text="Messages"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -268,6 +268,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:backgroundTint="@color/blue"
                 android:text="Logout"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/iv_settings"
