--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,13 +9,21 @@
         android:id="@+id/menu_home"
         android:name="com.example.sharetask.ui.home.HomeFragment"
         android:label="Home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_communityFragment_to_questionDetailFragment"
+            app:destination="@id/fragment_detail_question" />
+    </fragment>
 
     <fragment
         android:id="@+id/menu_forum"
-        android:name="com.example.sharetask.ui.community.CommunityFragment"
+        android:name="com.example.sharetask.ui.menu.CommunityFragment"
         android:label="Forum"
-        tools:layout="@layout/fragment_community" />
+        tools:layout="@layout/fragment_community">
+        <action
+            android:id="@+id/action_communityFragment_to_questionDetailFragment"
+            app:destination="@id/fragment_detail_question" />
+    </fragment>
 
     <fragment
         android:id="@+id/menu_upload"
@@ -34,5 +42,16 @@
         android:name="com.example.sharetask.ui.menu.ProfileFragment"
         android:label="Profile"
         tools:layout="@layout/fragment_profile" />
+
+    <fragment
+        android:id="@+id/fragment_detail_question"
+        android:name="com.example.sharetask.ui.menu.DetailQuestionFragment"
+        android:label="Detail Question"
+        tools:layout="@layout/fragment_detail_question">
+        <argument
+            android:name="questionId"
+            app:argType="string" />
+    </fragment>
+
 
 </navigation>
