--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="blue">#0F9AFE</color>
     <color name="blue_secondary">#26E4FF</color>
     <color name="gray">#808080</color>
+    <color name="gray_medium">#9E9E9E</color>
 </resources>
